<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_gradient"
    android:orientation="vertical"
    tools:context=".controller.LoginFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/task_manager_login_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:subtitle="Login"
        app:subtitleTextColor="#FFFFFF"
        app:title="Task Manager"
        app:titleTextColor="#FFFFFF" />

    <LinearLayout
        android:id="@+id/login_fragment_linearlayout"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom|center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/username_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1E6AE9"
            android:gravity="center"
            android:text="@string/username_textview"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/username_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/username_edittext_hint"
            android:inputType="textPersonName"
            android:textColor="#FCFFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#9E9E9E"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF1E6AE9"
            android:gravity="center"
            android:text="@string/password_textview"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/password_edittext_hint"
            android:inputType="textPersonName"
            android:password="true"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textSize="14sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B9265EF5"
            android:text="@string/login_button"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:backgroundTint="#7B9DD5" />

        <TextView
            android:id="@+id/or_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/or_textview"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/singup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#B9265EF5"
            android:text="@string/singup_button"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:backgroundTint="#7B9DD5" />

    </LinearLayout>
</LinearLayout>