<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/add_task_dialog_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_gradient"
    android:orientation="vertical">

    <EditText
        android:id="@+id/dialog_task_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="Task Name"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#9EF5F3F3" />

    <EditText
        android:id="@+id/dialog_task_desc_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="Task Description"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#9EF5F3F3" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview_background"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/yes_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_do_radio" />

        <RadioButton
            android:id="@+id/no_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doing_radio" />

        <RadioButton
            android:id="@+id/done_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_radio" />

    </RadioGroup>

    <TextView
        android:id="@+id/dialog_date_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/date_tv"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/dialog_time_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/time_tv"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

</LinearLayout>