<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_gradient"
    android:orientation="vertical"
    tools:context=".controller.MainFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tablayout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        app:subtitleTextColor="#FFFFFF"
        app:titleTextColor="#FFFFFF" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/main_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient"
        app:tabIndicatorColor="#E7EDF1"
        app:tabIndicatorHeight="3dp"
        app:tabTextColor="#FFFFFF">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/todo_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_do_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/doing_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doing_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/done_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done_tab" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </androidx.viewpager.widget.ViewPager>

</LinearLayout>